--- a/bio.html
+++ b/bio.html
@@ -23,7 +23,7 @@
 
 				<h2>Como trabalho</h2>
 
-					<blockquote class="depoimentos fiat">
+					<blockquote class="depoimentos" tabindex="1">
 						<p>João é o melhor desenvolvedor front-end com quem já trabalhei. Muito eficiente e muito capaz. Recomendo sem dúvidas!</p>
 						<cite>- José Souza, Fiat</cite>
 					</blockquote>
@@ -34,7 +34,7 @@
 
 				<h2>Experiência</h2>
 
-					<blockquote class="depoimentos petrobras">
+					<blockquote class="depoimentos" tabindex="2">
 						<p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.</p>
 						<cite>- Manoel Santos, Petrobrás</cite>
 					</blockquote>
