--- a/bio.html
+++ b/bio.html
@@ -17,7 +17,7 @@
 	<body>
 		<main>
 			<h1 class="titulo">Sobre mim </h1>
-			<div class="box-centralizado">
+			<div class="box-centralizado bio">
 				<p>Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de <em>qualidade</em>, <em>durabilidade</em> e que <em>agregam valor</em> para meus clientes.
 				Trabalho usando a web como plataforma, ou seja, respiro HTML5, CSS3 e JavaScript (ou melhor: ECMASCript). Crio sites para todos, seguindo as principais diretivas de acessibilidade, responsividade e web semântica, sem descuidar da qualidade de código.</p>
 
@@ -60,9 +60,9 @@
 				</ul>
 			</nav>
 			<ul class="social-menu">
-				<li><a href="https://github.com/joaodasilva" class="github">Github</a></li>
-				<li><a href="https://twitter.com/joaodasilva" class="twitter">Twitter</a></li>
-				<li><a href="https://br.linkedin.com/pub/joão-da-silva/32/4/508" class="linkedin">Linkedin</a></li>
+				<li><a href="https://github.com/joaodasilva" class="github" data-tooltip="Veja meus projetos opensource">Github</a></li>
+				<li><a href="https://twitter.com/joaodasilva" class="twitter" data-tooltip="Siga-me no Twitter">Twitter</a></li>
+				<li><a href="https://br.linkedin.com/pub/joão-da-silva/32/4/508" class="linkedin" data-tooltip="Veja meu currículo">Linkedin</a></li>
 			</ul>
 		</aside>
 		<footer class="rodape">
