adicionando tabela de habilidades na bio.html

--- a/bio.html
+++ b/bio.html
@@ -45,6 +45,51 @@
 				<h2>Comunidade</h2>
 
 				<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um blog.</p>
+
+				<h2>Resumo</h2>
+
+				<table>
+			        <thead>
+			            <tr>
+			                <th>Habilidade</th>
+			                <th>Nível</th>
+			                <th>Experiências</th>
+			            </tr>
+			        </thead>
+			        <tbody>
+			            <tr>
+			                <th>HTML5</th>
+			                <td>Proficiente</td>
+			                <td>Uso em todos os sites que desenvolvo.</td>
+			            </tr>
+			            <tr>
+			                <th>CSS3</th>
+			                <td>Proficiente</td>
+			                <td>Uso em todos os sites que desenvolvo.</td>
+			            </tr>
+			            <tr>
+			                <th>JavaScript</th>
+			                <td>Proficiente</td>
+			                <td>Uso em todos os sites que desenvolvo. Aplicando-o de forma não-obstrutiva.</td>
+			            </tr>
+			            <tr>
+			                <th>Design</th>
+			                <td>Proficiente</td>
+			                <td>Formado em Web Design pela UFRJ.</td>
+			            </tr>
+			            <tr>
+			                <th>Git</th>
+			                <td colspan="2" rowspan="3">Estudando</td>
+			            </tr>
+			            <tr>
+			                <th>Angular</th>
+			            </tr>
+			            <tr>
+			                <th>Java</th>
+			            </tr>
+			        </tbody>
+			    </table>
+
 			</div>
 		</main>
 		<img src="img/eu.jpg" class="perfil-foto" alt="Foto de João da Silva">
